--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -3,7 +3,6 @@
 .navbar {
   box-shadow: 0px 3px 6px #0000000F !important;
   background: #FFFFFF 0% 0% no-repeat padding-box;
-  opacity: 1;
   top: 0px;
   left: 0px;
   width: 1366px;
@@ -23,5 +22,15 @@
 [data-theme="dark"] .site-form-in-drawer-wrapper {
   border-top: 1px solid #303030;
   background: #1f1f1f;
+}
+
+.logo {
+  width: 600px;
+  float: left;
+}
+
+.container .menu_items {
+  float: right;
+  padding: 30px;
 }
 
